force-app/main/default/objects/VDT_CRM_Document_Column__mdt/VDT_CRM_Document_Column__mdt.object-meta.xml
<CustomObject>
    <label>VDT CRM Document Column</label>
    <pluralLabel>VDT CRM Document Column</pluralLabel>
</CustomObject>