force-app/main/default/objects/VDT_CRM_Document_Column__mdt/fields/Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_API_Name__c</fullName>
    <label>Field API Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>