force-app/main/default/objects/VDT_CRM_Document_Column__mdt/fields/Package_Version__c.field-meta.xml
<CustomField>
    <fullName>Package_Version__c</fullName>
    <label>Package Version</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Veeva</fullName>
                <default>true</default>
                <label>Veeva</label>
            </value>
            <value>
                <fullName>OCE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>