force-app/main/default/objects/VDT_CRM_Document_Column__mdt/fields/Vault_API_Field__c.field-meta.xml
<CustomField>
    <fullName>Vault_API_Field__c</fullName>
    <label>After Vault Column</label>
    <length>150</length>
    <type>Text</type>
</CustomField>